--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,8 @@ The iNZightTS2 package provides some simple analysis tools for exploring time se
 
 ```{r cran, eval = FALSE}
 install.packages("iNZightTS2")
-``` -->
+``` 
+-->
 
 Install from [GitHub](https://github.com/iNZightVIT/iNZightTS2):
 
@@ -57,8 +58,8 @@ library(tidyr)
 Use the `inzightts` function to create a temporal data set to be used by the functions of the package. The data is stored as a [tsibble](https://github.com/tidyverts/tsibble).
 
 ```{r data}
-data <- visitorsQ %>%
-    pivot_longer(!Date, names_to = "Country", values_to = "Visitors") %>%
+data <- visitorsQ |>
+    pivot_longer(!Date, names_to = "Country", values_to = "Visitors") |>
     inzightts(key = "Country")
 data
 ```
@@ -76,9 +77,9 @@ plot(data)
 Time series data often exhibit features such as trend, season and cycle. A decomposition plot breaks the data into visual components which simplies the analysis.
 
 ```{r decomp}
-dcmp <- data %>%
-    filter(Country == "Australia") %>%
-    inzightts() %>%
+dcmp <- data |>
+    filter(Country == "Australia") |>
+    inzightts() |>
     decomp()
 dcmp
 ```
