--- a/README.Rmd
+++ b/README.Rmd
@@ -48,8 +48,6 @@ remotes::install_github("iNZightVIT/iNZightTS")
 
 ```{r pkgs}
 library(iNZightTS)
-library(dplyr)
-library(tidyr)
 ```
 
 ### Getting started
@@ -58,7 +56,7 @@ Use the `inzightts` function to create a temporal data set to be used by the fun
 
 ```{r data}
 data <- visitorsQ |>
-    pivot_longer(!Date, names_to = "Country", values_to = "Visitors") |>
+    tidyr::pivot_longer(!Date, names_to = "Country", values_to = "Visitors") |>
     inzightts(key = "Country")
 data
 ```
@@ -77,7 +75,7 @@ Time series data often exhibit features such as trend, season and cycle. A decom
 
 ```{r decomp}
 dcmp <- data |>
-    filter(Country == "Australia") |>
+    dplyr::filter(Country == "Australia") |>
     inzightts() |>
     decomp()
 dcmp
